--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background: black;
+    background: rgb(0, 247, 255);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
