--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     color: white;
-    background: rgb(0, 247, 255);
+    background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(24, 26, 27);
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 122, 228);
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(21, 22, 21);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(255, 0, 0);
 }
